# ifrc-per-data-fetcher

./: .gitignore  pyproject.toml
data_python/: component-descriptions.json  countries.json  last-update.json  map-data.json  per-dashboard-data.json  per-overview.json  per-status.json  prioritization.json
src_python/: __init__.py  check_data.py  fetch_data.py  main.py  process_data.py
src_python/utils/: fetch_paginated_data.py  fetch_per_overview.py
