[project]
name = "ifrc-per-data-fetcher"
version = "1.0.0"
description = "Data fetcher and processor for IFRC GO Platform's PER (Preparedness for Effective Response) Dashboard"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "ISC"}
authors = [
    {name = "IFRC"}
]
keywords = ["ifrc", "per", "preparedness", "data-fetcher", "go-platform"]

dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src_python"]

[dependency-groups]
dev = []

